// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationEvent is rendered 1`] = `
<div
  class="euiNotificationEvent"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <span
      class="euiNotificationEvent__title"
    >
      title
    </span>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiText euiText--small"
      >
        <p>
          message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiNotificationEvent props contextMenuItems are rendered and id is returned 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="0"
>
  <div>
    <div>
      <button
        class="euiContextMenuItem"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            Context menu 1 for id: id
          </span>
        </span>
      </button>
      <button
        class="euiContextMenuItem"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            Context menu 2 for id: id
          </span>
        </span>
      </button>
      <button
        class="euiContextMenuItem"
        type="button"
      >
        <span
          class="euiContextMenu__itemLayout"
        >
          <span
            class="euiContextMenuItem__text"
          >
            Context menu 3 for id: id
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiNotificationEvent props isRead  is rendered 1`] = `
<div
  class="euiNotificationEvent euiNotificationEvent--withReadState"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <button
        aria-label="Mark alert-warning-01 as unread."
        class="euiButtonIcon euiButtonIcon--primary euiNotificationEventReadButton euiNotificationEventReadButton--isRead"
        data-test-subj="notificationEventReadButton"
        title="Mark alert-warning-01 as unread."
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          data-euiicon-type="dot"
        />
      </button>
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <span
      class="euiNotificationEvent__title euiNotificationEvent__title--isRead"
    >
      title
    </span>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiText euiText--small"
      >
        <p>
          message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiNotificationEvent props multiple messages are rendered 1`] = `
<div
  class="euiNotificationEvent"
>
  <div
    class="euiNotificationEventMeta"
  >
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiBadge euiBadge--hollow euiBadge--iconLeft euiNotificationEventMeta__badge"
      >
        <span
          class="euiBadge__content"
        >
          <span
            class="euiBadge__text"
          >
            Alert
          </span>
        </span>
      </span>
    </div>
    <div
      class="euiNotificationEventMeta__section"
    >
      <span
        class="euiNotificationEventMeta__time"
      >
        1 min ago
      </span>
    </div>
  </div>
  <div
    class="euiNotificationEvent__content"
  >
    <span
      class="euiNotificationEvent__title"
    >
      title
    </span>
    <div
      class="euiNotificationEventMessages"
    >
      <div
        class="euiAccordion euiNotificationEventMessages__accordion"
      >
        <div
          class="euiAccordion__triggerWrapper"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="false"
            class="euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiIEFlexWrapFix"
            >
              + 3 messages
            </span>
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper"
          id="generated-id"
          role="region"
          tabindex="-1"
        >
          <div>
            <div
              class=""
            >
              <div
                class="euiNotificationEventMessages__accordionContent"
              >
                <p>
                  message 1
                </p>
                <p>
                  message 2
                </p>
                <p>
                  message 3
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
